fix routage mineur, fix getprogramme par user

--- a/FitnessTracker.V1/Pages/ChoixProgramme.razor
+++ b/FitnessTracker.V1/Pages/ChoixProgramme.razor
@@ -10,7 +10,7 @@
     private async Task OnProgrammePersoClick()
     {
         await Task.Yield(); // Évite warning pour async void
-        Nav.NavigateTo("/generation");
+        Nav.NavigateTo("/generate-programme");
     }
 
     private async Task OnProgrammePredefClick()
