--- a/FitnessTracker.V1/wwwroot/css/duo-theme.css
+++ b/FitnessTracker.V1/wwwroot/css/duo-theme.css
@@ -247,3 +247,40 @@ body {
         font-size: 1.4rem;
         color: #1CB0F6;
     }
+
+/*choix de programme*/
+.duo-bubble {
+    background-color: #ffffff;
+    border-radius: 16px;
+    padding: 1rem;
+    margin-bottom: 1.5rem;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    position: relative;
+    border-left: 6px solid #58cc02;
+    font-size: 0.95rem;
+    color: #333;
+}
+
+    /* Le petit triangle à gauche */
+    .duo-bubble::before {
+        content: "";
+        position: absolute;
+        top: 20px;
+        left: -12px;
+        width: 0;
+        height: 0;
+        border-top: 8px solid transparent;
+        border-bottom: 8px solid transparent;
+        border-right: 12px solid #58cc02;
+    }
+
+.duo-quote {
+    font-style: italic;
+    background-color: #f0f8f0;
+    border-left: 4px solid #58cc02;
+    padding: 0.5rem 0.8rem;
+    border-radius: 10px;
+    margin-top: 0.5rem;
+    font-size: 0.9rem;
+    color: #444;
+}
