ajout des images

--- a/FitnessTracker.V1/Pages/MonProfil.razor
+++ b/FitnessTracker.V1/Pages/MonProfil.razor
@@ -145,6 +145,8 @@ else
                     Id = user.Id,
                     Age = 25,
                     Sexe = "Homme",
+                    Taille= "180",
+                    Poids=80,
                     Level = "Debutant",
                     Objective = "Hypertrophy",
                     SeancesPerWeek = 3,
