--- a/FitnessTracker.V1/Pages/ProgrammeLancer.razor
+++ b/FitnessTracker.V1/Pages/ProgrammeLancer.razor
@@ -2,6 +2,7 @@
 @inject NavigationManager Nav
 
 @page "/programme-lancer/{NomProgramme}"
+@using FitnessTracker.V1.Services.ProgrammeGeneration.ProgrammeClassic
 @using FitnessTracker.V1.Services.ProgrammeGeneration.ProgrammeStar
 
 @code {
