--- a/FitnessTracker.V1/Pages/Analyse.razor
+++ b/FitnessTracker.V1/Pages/Analyse.razor
@@ -36,7 +36,7 @@ else
                 </div>
             </div>
         </div>
-
+@* 
         <div class="thumb-container" @onclick="ShowRadarModal">
             <div class="duo-card">
                 <i class="bi bi-graph-up-arrow" style="font-size:2rem;color:#1CB0F6;"></i>
@@ -45,9 +45,9 @@ else
                     <div class="duo-objectif">Forces et faiblesses</div>
                 </div>
             </div>
-        </div>
+        </div> *@
 
-        <div class="thumb-container" @onclick="ShowBmiModal">
+       @*  <div class="thumb-container" @onclick="ShowBmiModal">
             <div class="duo-card">
                 <i class="bi bi-activity" style="font-size:2rem;color:#1CB0F6;"></i>
                 <div>
@@ -55,9 +55,9 @@ else
                     <div class="duo-objectif">Suivi santé</div>
                 </div>
             </div>
-        </div>
+        </div> *@
 
-        <div class="thumb-container" @onclick="ShowProgModal">
+        @* <div class="thumb-container" @onclick="ShowProgModal">
             <div class="duo-card">
                 <i class="bi bi-calendar3" style="font-size:2rem;color:#1CB0F6;"></i>
                 <div>
@@ -65,9 +65,9 @@ else
                     <div class="duo-objectif">Vision du programme</div>
                 </div>
             </div>
-        </div>
+        </div> *@
 
-        <div class="thumb-container" @onclick="ShowPieModal">
+        @* <div class="thumb-container" @onclick="ShowPieModal">
             <div class="duo-card">
                 <i class="bi bi-pie-chart" style="font-size:2rem;color:#1CB0F6;"></i>
                 <div>
@@ -75,7 +75,7 @@ else
                     <div class="duo-objectif">Répartition entraînée</div>
                 </div>
             </div>
-        </div>
+        </div> *@
 
         <div class="thumb-container" @onclick="ShowPrModal">
             <div class="duo-card">
