--- a/FitnessTracker.V1/Pages/MonProfil.razor
+++ b/FitnessTracker.V1/Pages/MonProfil.razor
@@ -50,15 +50,12 @@ else
         <div class="duo-card">
             <div class="duo-title">Objectif</div>
             <InputSelect class="form-select" @bind-Value="profile.Objective">
-                <option value="Force">Force</option>
-                <option value="Endurance">Endurance</option>
-                <option value="Hypertrophy">Hypertrophie</option>
-                <option value="Fat_loss">Perte de poids</option>
-                <option value="Mobility">Mobilité</option>
-                <option value="Strength">Force / Strength</option>
+                <option value="Force">Gagner de la force</option>
+                <option value="Endurance">Travailler son endurance</option>
+                <option value="Hypertrophy">Gagner du muscle</option>
+                <option value="Fat_loss">Perdre du poids</option>
                 <option value="Glutes">Fessiers</option>
-                <option value="Calistenie">Calisthenie</option>
-            </InputSelect>
+             </InputSelect>
         </div>
 
         <div class="duo-card">
