--- a/FitnessTracker.V1/Pages/CreateProgramme.razor
+++ b/FitnessTracker.V1/Pages/CreateProgramme.razor
@@ -6,6 +6,7 @@
 @using static FitnessTracker.V1.Models.Model
 @using System.Text.Json
 @using Blazored.LocalStorage
+@using FitnessTracker.V1.Models.Enumeration
 
 <style>
     .input-label {
@@ -89,7 +90,7 @@
     <input class="form-control" placeholder="Description" @bind="filterDescription" />
     <input class="form-control" placeholder="Muscle" @bind="filterMuscle" />
 
-    <h5>Catégories</h5>
+    @* <h5>Catégories</h5>
     <button class="btn btn-sm btn-link" @onclick="() => selectedCategories.Clear()">Tout décocher</button>
     @foreach (var cat in AllCategories)
     {
@@ -105,7 +106,7 @@
         <label class="me-2">
             <input type="checkbox" @onchange="e => ToggleFilter(selectedEquipments, eq, e)" checked="@selectedEquipments.Contains(eq)" /> @eq
         </label>
-    }
+    } *@
 
     <h5>Résultats filtrés : @FilteredExercises.Count()</h5>
     <div style="max-height: 300px; overflow-y: scroll;">
